# Quark

./: .gitignore  .rustfmt.toml  README.md  config.json  makefile  minikube_install.sh  mmcpy_multi.cpp
cudaproxy/: Cargo.toml  README.md  makefile
cudaproxy/src/: cudaproxy.rs  lib.rs  proxy.rs  syscall
fornax_openapi/: Cargo.toml  README.md
fornax_openapi/fornax-openapi-tests/: Cargo.toml
fornax_openapi/fornax-openapi-tests/src/: api_versions.rs  application.rs  deserialize_leniency.rs  lib.rs  patch.rs  pod.rs  session.rs  time.rs
fornax_openapi/k8s-openapi-codegen/: README.md
fornax_openapi/k8s-openapi-codegen-common/src/: lib.rs
fornax_openapi/k8s-openapi-codegen/src/: logger.rs  main.rs  supported_version.rs
fornax_openapi/k8s-openapi-derive/src/: custom_resource_definition.rs  lib.rs
fornax_openapi/src/: client.rs  lib.rs
fornax_openapi/src/v1_0/: mod.rs  watch_response.rs
qkernel/: Cargo.toml  aarch64-qkernel.json  makefile  rust-toolchain  x86_64-qkernel.json
qkernel/.cargo/: config.toml
qkernel/src/: Kernel.rs  SignalDef.rs  aqcall.rs  backtracer.rs  data_buff.rs  fd.rs  gdt.rs  guest_host_allocator.rs  guestfdnotifier.rs  heap.rs  id_mgr.rs  kernel_def.rs  kernel_util.rs  lib.rs  mm.rs  mutex.rs  perflog.rs  print.rs  qkernel.rs  rdma_def.rs  seqcount.rs  singleton.rs  task.rs  taskMgr.rs  uid.rs  vcpu.rs  version.rs
qkernel/src/asm/: mod.rs
qkernel/src/boot/: config.rs  controller.rs  fs.rs  loader.rs  mod.rs  oci.rs  process.rs  specutils.rs  trans_buf.rs
qkernel/src/fs/: anon.rs  attr.rs  copy_up.rs  dentry.rs  dirent.rs  file.rs  file_overlay.rs  filesystems.rs  flags.rs  inode.rs  inode_overlay.rs  lock.rs  mod.rs  mount.rs  mount_overlay.rs  overlay.rs  timerfd.rs
qkernel/src/interrupt/: idt.rs  mod.rs
qkernel/src/kernel/: abstract_socket_namespace.rs  async_wait.rs  cpuset.rs  eventfd.rs  fasync.rs  fd_table.rs  fs_context.rs  futex.rs  ipc_namespace.rs  kernel.rs  mod.rs  platform.rs  posixtimer.rs  semaphore.rs  shm.rs  signal_handler.rs  signalfd.rs  time.rs  uts_namespace.rs  vdso.rs
qkernel/src/loader/: elf.rs  interpreter.rs  loader.rs  mod.rs  vdso.rs
qkernel/src/memmgr/: arch.rs  buf_allocator.rs  linked_list.rs  list_allocator.rs  mapping.rs  mapping_set.rs  mem_alloc.rs  memmap.rs  metadata.rs  mm.rs  mod.rs  pma.rs  pmamgr.rs  syscalls.rs  vma.rs
qkernel/src/nvproxy/: mod.rs
qkernel/src/qkernel/: arch.rs
qkernel/src/quring/: async.rs  mod.rs  uring.rs  uring_mgr.rs  uring_op.rs
qkernel/src/socket/: control.rs  mod.rs  socket.rs
qkernel/src/syscalls/: mod.rs  sys_aio.rs  sys_capability.rs  sys_chmod.rs  sys_epoll.rs  sys_eventfd.rs  sys_file.rs  sys_futex.rs  sys_getdents.rs  sys_identity.rs  sys_inotify.rs  sys_membarrier.rs  sys_memfd.rs  sys_mempolicy.rs  sys_mmap.rs  sys_mmap_socket.rs  sys_msgqueue.rs  sys_pipe.rs  sys_poll.rs  sys_prctl.rs  sys_proxy.rs  sys_random.rs  sys_read.rs  sys_rlimit.rs  sys_rusage.rs  sys_sched.rs  sys_seccomp.rs  sys_sem.rs  sys_shm.rs  sys_signal.rs  sys_socket.rs  sys_splice.rs  sys_stat.rs  sys_sync.rs  sys_sysinfo.rs  sys_syslog.rs  sys_thread.rs  sys_time.rs  sys_timer.rs  sys_timerfd.rs  (+5 more)
qkernel/src/tcpip/: mod.rs  tcpip.rs
qkernel/src/threadmgr/: linkedlist.rs  mod.rs  pid_namespace.rs  processgroup.rs  refcounter.rs  session.rs  task_acct.rs  task_block.rs  task_clone.rs  task_exec.rs  task_exit.rs  task_futex.rs  task_identity.rs  task_log.rs  task_run.rs  task_sched.rs  task_signals.rs  task_start.rs  task_stop.rs  task_syscall.rs  task_usermem.rs  thread.rs  thread_group.rs  threads.rs
qkernel/src/ucall_server/: mod.rs  ucall_server.rs
qkernel/src/util/: cstring.rs  mod.rs
qserverless/: .gitignore  Cargo.toml  Makefile  README.md  a.txt  build.rs  fp_logging_config.yaml  fs_logging_config.yaml  logging_config.yaml  na_logging_config.yaml
qserverless/deployment/: fp.Dockerfile  py.Dockerfile
qserverless/proto/: func.proto  nm.proto  node_mgr.proto  qobjs.proto
qserverless/src/: lib.rs
qserverless/src/dashboard/: Makefile  app.py  qobjs_pb2.py  qobjs_pb2_grpc.py
qserverless/src/fornax_informer/: session.rs
qserverless/src/func_pod/: blob_mgr.rs  func_def.rs  func_mgr.rs  funcagent_client.rs  funcall_mgr.rs  main.rs
qserverless/test/: ping.py  pypackage1.json  pypackage2.json  setupcni.cmd
qservice/: Cargo.toml  Makefile  cmd.txt  cni_logging_config.yaml  env.txt  gateway_logging_config.yaml  na_logging_config.yaml  scheduler_logging_config.yaml  ss_logging_config.yaml  test.txt
qservice/gateway/: func_agent_mgr.rs  func_mgr.rs  func_worker.rs  gateway.rs  http_gateway.rs  namespace_mgr.rs  obj_repo.rs  pod_mgr.rs  tsot_client.rs
qservice/node_agent/: na_main.rs
qservice/qactor/: Cargo.toml  setup.txt
qservice/qlet/: na_main.rs  node1.json  node2.json  qlet_config.rs
qservice/qshare/: Cargo.toml  Makefile  build.rs
qservice/scheduler/: filtering.rs  obj_mgr.rs  obj_repo.rs  pod_handler.rs  scheduler.rs  scheduler_svc.rs
qservice/state_svc/: QletAggrStore.rs  ss_main.rs  state_svc.rs  svc_dir.rs
qservice/test_client/: client.rs
qservice/tsot_cni/: tsot_main.rs
qvisor/: Cargo.toml  makefile  rust-toolchain  x86_64-qvisor.json
qvisor/src/: amd64_def.rs  elf_loader.rs  guestfdnotifier.rs  heap_alloc.rs  kernel_def.rs  kvm_ctl.rs  kvm_vcpu.rs  kvm_vcpu_aarch64.rs  kvm_vcpu_x86.rs  lib.rs  main.rs  memmgr.rs  namespace.rs  perflog.rs  print.rs  qcall.rs  rdma_def.rs  syncmgr.rs  uring.rs  util.rs
qvisor/src/asm/: mod.rs  (+1 more)
rdma_srv/: Cargo.toml  build.rs  makefile  rdma_def.rs
rdma_srv/deploy/: Dockerfile
rdma_srv/src/: asm.rs  common.rs  configmap_informer.rs  constants.rs  endpoints_informer.rs  id_mgr.rs  kernel_def.rs  main.rs  node_informer.rs  pod_informer.rs  print.rs  qlib  rdma.rs  rdma_agent.rs  rdma_channel.rs  rdma_conn.rs  rdma_ctrlconn.rs  rdma_def.rs  rdma_srv.rs  service_informer.rs  unix_socket.rs  unix_socket_def.rs
resilience_function/: Cargo.toml  Makefile  build.rs
resilience_function/proto/: service_directory.proto
resilience_function/src/: lib.rs  service_directory.rs  service_directory_main.rs
(+1398 files in other folders)
