[package]
name = "cudaproxy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.94"
cuda-runtime-sys = "0.3.0-alpha.1"
cuda-driver-sys = "0.3.0"
spin = "0.9.2"
rcublas-sys = "0.5.0"
cuda11-cublasLt-sys = "0.3.0"
libelf = "0.1.0"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.8"
default-features = false
features = ["alloc"]