[package]
name = "resilience_function"
version = "0.1.0"
edition = "2021"
include = [
	"build.rs",
	"Cargo.toml",
	"LICENSE",
	"README.md",
	"src/**/*",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
etcd-client = "0.10.2"
tokio = { version = "1.25", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.8" }
futures-core = { version = "0.3", default-features = false }
futures-io = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = [
	"io", # for futures_util::StreamExt::into_async_read
] }
regex = "1.7.1"
#fornax-openapi= { path = "../fornax_openapi", features = [ ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
crossbeam = "0.8.2"
spin = "0.9.2"
simple-logging = "2.0.2"
log = "0.4.17"
scopeguard = { version = "^1.1.0", default-features = false }
qobjs = { path = "./src/qobjs", features = [ ] }
futures = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4.24"
tower = "0.4.13"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
const_format = "0.2.30"
rand = "0.8.5"
local-ip-address = "0.5.1"
hostname = "^0.3"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]

[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "service_directory"
path = "src/service_directory/service_directory_main.rs"

[[bin]]
name = "node_mgr"
path = "src/node_mgr/nm_main.rs"

[[bin]]
name = "node_agent"
path = "src/node_agent/na_main.rs"


[[bin]]
name = "test"
path = "src/protobtest/main.rs"
