[package]
name = "qservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qshare = { path = "./qshare" }

tokio = { version = "1.25", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.8" }
hostname = "^0.3"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.7.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4.24"
tower = "0.4.13"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[bin]]
name = "node_agent"
path = "node_agent/na_main.rs"