[package]
name = "qservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qshare = { path = "./qshare" }

tokio = { version = "1.25", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.8" }
hostname = "^0.3"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.7.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4.24"
tower = "0.4.13"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
simple-logging = "2.0.2"
log = "0.4.17"
log4rs = "1"
const_format = "0.2.30"
local-ip-address = "0.5.1"
once_cell = "1.17.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[[bin]]
name = "node_agent"
path = "node_agent/na_main.rs"