[package]
name = "quark"
version = "0.6.0"
authors = ["Yulin Sun <yulin.sun@quarksoft.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.94"
#kvm-bindings = "0.5.0"
kvm-bindings ={ git = "https://github.com/123abcpp/kvm-bindings.git",branch = "quark", features = ["fam-wrappers"] }
#kvm-ioctls = "0.11.0"
#kvm-ioctls = { git = "https://github.com/QuarkContainer/kvm-ioctls.git" }
kvm-ioctls = { git = "https://github.com/123abcpp/kvm-ioctls.git" }
xmas-elf = { git = "https://github.com/gz/xmas-elf.git" }
x86_64 = { version = "0.14.10"}
memmap = "0.7.0"
ux = "0.1.2"
byteorder = "1.3.2"
spin = "0.9.2"
#spin = {path = "/home/brad/rust/spin-rs"}
rusty-asm = "0.2.1"
bit_field = "0.9.0"
errno = "0.2.4"
simplelog = "^0.7.4"
tempfile="3.0.1"
rand = "0.7.3"
rand_pcg = "0.2.1"
rand_seeder = "0.2.1"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
clap = "2.33.3"
capabilities = { git = "https://github.com/gcmurphy/rust-capabilities", package = "capabilities", rev = "bb01f0c6"}
regex = "1.3.9"
fs2 = "0.4.3"
chrono = "0.4"
nix = "0.23.1"
num-traits = "^0.2.5"
scopeguard = { version = "^1.1.0", default-features = false }
prctl = "1.0.0"
procfs = "0.12.0"
caps = "0.2.0"
tabwriter = "1.2.1"
bitflags = "1"
ringbuf = "0.2.3"
num_cpus = "1.13.0"
core_affinity = "0.5.10"
cache-padded = "1.1.1"
#rdmaffi = { git = "https://github.com/QuarkContainer/RDMARust.git", package = "rdma-sys", version = "0.1.0" }
#containerd-shim = { path = "/home/brad/rust/rust-extensions/crates/shim", package = "containerd-shim", version = "0.2.0" }
containerd-shim = { git = "https://github.com/QuarkContainer/rust-extensions.git", package = "containerd-shim", version = "0.3.0" }
oci-spec = "0.5.4"
os_pipe = "1.0.0"
time = { version = "0.3.7", features = ["serde", "std"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
hashbrown = "0.12.3"
enum_dispatch = { git = "https://github.com/QuarkContainer/enum_dispatch_clone.git" }
cuda-driver-sys = "0.3.0"
cuda-runtime-sys = "0.3.0-alpha.1"
libelf = "0.1.0"
io-uring = "0.6.3"
cfg-if = "1.0.0"
sev = { git = "https://github.com/123abcpp/sev.git", branch = "quark_sev" }

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.8"
default-features = false
features = ["alloc"]

[profile.dev]
opt-level = 0

[features]
cc = []

[profile.release]
opt-level = 3
debug = 0
overflow-checks = false
lto = true
codegen-units = 1
debug-assertions = false

[[bin]]
name = "quark"
path = "src/main.rs"
