[package]
name = "resilience_function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10"
tokio = { version = "1.0", default-features = false, features = [
	"macros", # for #[tokio::test]
  "rt-multi-thread",
	"test-util", # for tokio::time::pause
	"time", # for tokio::time::sleep
] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.7"
futures-core = { version = "0.3", default-features = false }
futures-io = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = [
	"io", # for futures_util::StreamExt::into_async_read
] }
fornax-openapi= { path = "../fornax_openapi", features = [
] }

[features]

[build-dependencies]
tonic-build = "0.7"

[[bin]]
name = "service_directory"
path = "src/service_directory/service_directory_main.rs"
