[package]
name = "resilience_function"
version = "0.1.0"
edition = "2021"
include = [
	"build.rs",
	"Cargo.toml",
	"LICENSE",
	"README.md",
	"src/**/*",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.8"
futures-core = { version = "0.3", default-features = false }
futures-io = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = [
	"io", # for futures_util::StreamExt::into_async_read
] }
#fornax-openapi= { path = "../fornax_openapi", features = [ ] }

[features]

[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "service_directory"
path = "src/service_directory/service_directory_main.rs"

[[bin]]
name = "test"
path = "src/protobtest/main.rs"
