[package]
name = "pyrust"
version = "0.1.0"
edition = "2021"



[dependencies]
qshare = { path = "../qshare" }
async-trait = "0.1.68"
pyo3 = "0.20.3"
axum = "0.7.4"

tonic = { version = "0.8" }
tokio = { version = "1.25", features = ["full"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

once_cell = "1.17.1"
simple-logging = "2.0.2"
log = "0.4.17"
log4rs = "1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "qactor"
crate-type = ["cdylib"]
path = "qactorlib/lib.rs"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]