[package]
name = "pyrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "qactor"
crate-type = ["cdylib"]

[dependencies]
qshare = { path = "../qshare" }
async-trait = "0.1.68"
axum = "0.7.4"

tonic = { version = "0.8" }
tokio = { version = "1.25", features = ["full"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
tokio-current-thread = "0.1.7"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

once_cell = "1.17.1"
simple-logging = "2.0.2"
log = "0.4.17"
log4rs = "1"
scopeguard = { version = "^1.1.0", default-features = false }
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

async-std = "1.9"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]