[package]
name = "qshare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.8" }
#tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio = { version = "1.25", features = ["full"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
prost = "0.11"
hostname = "^0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
local-ip-address = "0.5.1"
gethostname = "0.4.3"
regex = "1.7.1"
zip = { version = "0.5", feature = [ "deflate" ] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
simple-logging = "2.0.2"
log = "0.4.17"
log4rs = "1"
const_format = "0.2.30"
ipnetwork = "0.20.0"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
chrono = "0.4.24"
once_cell = "1.17.1"
async-trait = "0.1.77"
scopeguard = { version = "^1.1.0", default-features = false }
spin = "0.9.5"
etcd-client = "0.12.4"
rand = "0.8.5"
libc = "0.2.94"
axum = "0.7.4"
pyo3 = { version = "0.20", features = ["extension-module"] }
hyper = { version = "1.0.0", features = ["full"] }
nix = "0.23.1"

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[build-dependencies]
tonic-build = { version = "0.8" , features = ["prost"]}
