[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qserverless"
version = "0.0.3"
authors = [
  { name="Yulin Sun", email="sunyulin728@gmail.com" },
]
description = "Quark Serverless Python SDK"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/QuarkContainer/Quark/tree/main/qserverless/src/python"
"Bug Tracker" = "https://github.com/QuarkContainer/Quark/issues"