[package]
name = "qobjs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
etcd-client = "0.10.2"
tokio = { version = "1.25", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.8"
futures-core = { version = "0.3", default-features = false }
futures-io = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = [
	"io", # for futures_util::StreamExt::into_async_read
] }
regex = "1.7.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
simple-logging = "2.0.2"
log = "0.4.17"
scopeguard = { version = "^1.1.0", default-features = false }

[build-dependencies]
tonic-build = "0.8"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
