[package]
name = "qobjs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
etcd-client = "0.10.2"
tokio = { version = "1.25", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.8"
futures-core = { version = "0.3", default-features = false }
futures-io = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = [
	"io", # for futures_util::StreamExt::into_async_read
] }
regex = "1.7.1"
serde_derive = "1.0.152"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
simple-logging = "2.0.2"
log = "0.4.17"
scopeguard = { version = "^1.1.0", default-features = false }
spin = "0.9.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
gethostname = "0.4.2"
local-ip-address = "0.5.1"
hostname = "^0.3"
chrono = "0.4.24"
ipnetwork = "0.20.0"
rocksdb = "0.20.1"
async-trait = "0.1.68"
tower = "0.4.13"
postgres = "0.19.5"

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
tonic-build = "0.8"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
