[package]
name = "dns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "2.0.4"
tokio = { version = "1.15", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "dns"
path = "src/dns.rs"