[package]
name = "functest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
axum = "0.7.4"
axum-server = "0.6.0"

hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["full"] }
http-body-util = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"